--- a/perplexity-ask/package.json
+++ b/perplexity-ask/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@perplexity-ai/mcp-server",
-  "version": "0.2.0",
-  "description": "Official MCP server for Perplexity API Platform",
+  "name": "@mehmetbaykar/perplexity-mcp-server",
+  "version": "0.5.0",
+  "description": "Real-time web search, reasoning, and research through Perplexity's API",
   "keywords": [
     "ai",
     "perplexity",
@@ -14,10 +14,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/perplexityai/modelcontextprotocol.git"
+    "url": "git+https://github.com/mehmetbaykar/perplexity-mcp.git"
   },
   "license": "MIT",
-  "author": "Perplexity <>",
+  "author": "Mehmet Baykar",
   "publishConfig": {
     "access": "public"
   },
